--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: Marcin Sulecki
 description: .NET Developer
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: https://avatars0.githubusercontent.com/u/779025?s=400&u=ac52c5b650f7385ff0bc2cb9fd494b0bc2cd91a4&v=4
 
 #
 # Flags below are optional
@@ -18,7 +18,7 @@ avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/je
 # Includes an icon in the footer for each username you enter
 footer-links:
   dribbble:
-  email:
+  email: marcin.sulecki@sulmar.pl
   facebook:
   flickr:
   github: barryclark/jekyll-now
